Update Tokyo traveltimes MDS.ipynb

--- a/Tokyo traveltimes MDS.ipynb
+++ b/Tokyo traveltimes MDS.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/html": [
-       "<a href=http://nbviewer.jupyter.org/github/kutvonenaki/Tokyo-traveltimes-MDS/blob/master/Tokyo%20traveltimes%20MDS.ipynb\">http://nbviewer.jupyter.org/github/kutvonenaki/Tokyo-traveltimes-MDS/blob/master/Tokyo%20traveltimes%20MDS.ipynb</a>"
+       "<a href="http://nbviewer.jupyter.org/github/kutvonenaki/Tokyo-traveltimes-MDS/blob/master/Tokyo%20traveltimes%20MDS.ipynb\">http://nbviewer.jupyter.org/github/kutvonenaki/Tokyo-traveltimes-MDS/blob/master/Tokyo%20traveltimes%20MDS.ipynb</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
